--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@unform/core": "2.1.0",
     "@unform/mobile": "2.1.0",
     "axios": "^0.21.0",
+    "formik": "^2.2.5",
     "react": "16.13.1",
     "react-native": "0.63.3",
     "react-native-gesture-handler": "^1.8.0",
