--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@react-native-community/async-storage": "^1.12.1",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-firebase/app": "^10.1.0",
+    "@react-native-firebase/auth": "^10.1.0",
+    "@react-native-firebase/database": "^10.1.0",
     "@react-native-firebase/storage": "^10.1.0",
     "@react-navigation/drawer": "^5.11.4",
     "@react-navigation/native": "^5.7.6",
@@ -27,6 +29,7 @@
     "react-native-gesture-handler": "^1.8.0",
     "react-native-image-picker": "^2.3.4",
     "react-native-iphone-x-helper": "^1.3.0",
+    "react-native-paper": "^4.4.1",
     "react-native-reanimated": "^1.13.1",
     "react-native-safe-area-context": "^3.1.8",
     "react-native-screens": "^2.11.0",
