--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.12.1",
+    "@react-native-community/datetimepicker": "^3.0.6",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-firebase/app": "^10.1.0",
     "@react-native-firebase/auth": "^10.1.0",
@@ -23,9 +24,11 @@
     "@unform/core": "2.1.0",
     "@unform/mobile": "2.1.0",
     "axios": "^0.21.0",
+    "date-fns": "^2.16.1",
     "formik": "^2.2.5",
     "react": "16.13.1",
     "react-native": "0.63.3",
+    "react-native-camera": "^3.40.0",
     "react-native-gesture-handler": "^1.8.0",
     "react-native-image-picker": "^2.3.4",
     "react-native-iphone-x-helper": "^1.3.0",
