--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "axios": "^0.21.0",
     "date-fns": "^2.16.1",
     "formik": "^2.2.5",
+    "lodash": "^4.17.20",
     "react": "16.13.1",
     "react-native": "0.63.3",
     "react-native-camera": "^3.40.0",
@@ -46,6 +47,7 @@
     "@babel/runtime": "^7.8.4",
     "@react-native-community/eslint-config": "^1.1.0",
     "@types/jest": "^25.2.3",
+    "@types/lodash": "^4.14.165",
     "@types/react-native": "^0.63.2",
     "@types/react-native-vector-icons": "^6.4.6",
     "@types/react-test-renderer": "^16.9.2",
