--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-native-firebase/auth": "^10.1.0",
     "@react-native-firebase/database": "^10.1.0",
     "@react-native-firebase/storage": "^10.1.0",
+    "@react-native-picker/picker": "^1.9.4",
     "@react-navigation/drawer": "^5.11.4",
     "@react-navigation/native": "^5.7.6",
     "@react-navigation/stack": "^5.9.3",
