--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-native-safe-area-context": "^3.1.8",
     "react-native-screens": "^2.11.0",
     "react-native-vector-icons": "^7.1.0",
+    "react-native-webview": "^11.0.2",
     "rn-fetch-blob": "^0.12.0",
     "styled-components": "^5.2.0",
     "yup": "^0.29.3"
