--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "lodash": "^4.17.20",
     "react": "16.13.1",
     "react-native": "0.63.3",
+    "react-native-awesome-alerts": "^1.4.2",
     "react-native-camera": "^3.40.0",
     "react-native-gesture-handler": "^1.8.0",
     "react-native-image-picker": "^2.3.4",
